infra/k8s/webapi.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapi-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webapi
  template:
    metadata:
      labels:
        app: webapi
    spec:
      containers:
        - name: webapi
          imagePullPolicy: Always
          image: ahmedavid/secret-share-api:latest
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: webapi
spec:
  selector:
    app: webapi
  type: ClusterIP
  ports:
    - port: 80
