infra/k8s/website.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: website-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: website
  template:
    metadata:
      labels:
        app: website
    spec:
      containers:
        - name: website
          imagePullPolicy: Always
          image: ahmedavid/website:latest
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: website
spec:
  selector:
    app: website
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
