infra/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: secret-share-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: www.davidahmadov.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: website
                port: 
                  number: 80
    - host: client.davidahmadov.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: client
                port: 
                  number: 80
    - host: webapi.davidahmadov.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: webapi
                port: 
                  number: 80
